First round of Validator HTML

--- a/explore.html
+++ b/explore.html
@@ -37,7 +37,7 @@
       <ul>
         <li class="dropdown"><a class="hidden-small-screens" href="#"><i aria-hidden="true" class="fas fa-tasks"></i>Plan your visit<i class="fas fa-sort-down"></i></a>
           <ul class="dropdown-menu">
-          <li></i> <a href="exhibitions.html"><i class="fas fa-images"></i>Exhibitions</a>
+          <li><a href="exhibitions.html"><i class="fas fa-images"></i>Exhibitions</a>
           </li>
           <li>
             <a href="explore.html"><i class="fas fa-binoculars"></i>Explore</a>
@@ -128,7 +128,7 @@
       </section>
     </main>
     <footer>
-      <form method="" class="newsletter">
+      <form class="newsletter">
             <div class="newsletter-field">
             <label class="newsletter-heading" for="email">subscribe to our newsletter</label>
             <input class="newsletter-contact-field" type="email" id="email" placeholder="example@email.com" />
@@ -137,7 +137,7 @@
               <label for="toggle-popup" class="cta">sign up</label>
               <input type="checkbox" id="toggle-popup" />
               <div class="modal-popup">
-                <img src="/images/rocket.svg">
+                <img alt="yellow rocket" src="/images/rocket.svg">
                 <div class="feedback">
                   <label class="close-feedback" for="toggle-popup"><i class="fas fa-times"></i></label>
                 <p>
@@ -158,7 +158,7 @@
         </ul>
         </div>
       </div> 
-      <p class="copyright">&#169 Copyright 2021</p>
+      <p class="copyright">&#169; Copyright 2021</p>
     </footer>
   </body>
 </html>
