--- a/get-involved.html
+++ b/get-involved.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
     <link href="css/style.css" rel="stylesheet" />
-    <link href="/css/explore_contact_get-involved.css" rel="stylesheet"/>
+    <link href="/css/explore_contact_get-involved.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
     <script
       src="https://kit.fontawesome.com/9aef28119c.js"
@@ -26,122 +26,232 @@
   <body>
     <header>
       <div class="home">
-        <a href="index.html"><img alt="Community science museum logo"
-          class="logo" src="images/logo-desktop.png"/></a>
+        <a href="index.html"
+          ><img
+            alt="Community science museum logo"
+            class="logo"
+            src="images/logo-desktop.png"
+        /></a>
 
-      <a aria-label="Open main menu" class="hamburger" href="#navbar">
-      <span class="sr-only">Open main menu</span>
-    <i aria-hidden="true" class="fas fa-bars"></i></a>
-    </div>
-    <nav id="navbar">
-      <ul>
-        <li class="dropdown"><a class="hidden-small-screens" href="#"><i aria-hidden="true" class="fas fa-tasks"></i>Plan your visit<i class="fas fa-sort-down"></i></a>
-          <ul class="dropdown-menu">
-          <li></i> <a href="exhibitions.html"><i class="fas fa-images"></i>Exhibitions</a>
+        <a aria-label="Open main menu" class="hamburger" href="#navbar">
+          <span class="sr-only">Open main menu</span>
+          <i aria-hidden="true" class="fas fa-bars"></i
+        ></a>
+      </div>
+      <nav id="navbar">
+        <ul>
+          <li class="dropdown">
+            <a class="hidden-small-screens" href="#"
+              ><i aria-hidden="true" class="fas fa-tasks"></i>Plan your visit<i
+                class="fas fa-sort-down"
+              ></i
+            ></a>
+            <ul class="dropdown-menu">
+              <li>
+                <a href="exhibitions.html"
+                  ><i class="fas fa-images"></i>Exhibitions</a
+                >
+              </li>
+              <li>
+                <a href="explore.html"
+                  ><i class="fas fa-binoculars"></i>Explore</a
+                >
+              </li>
+              <li>
+                <a href="the-museum.html"
+                  ><i class="fas fa-landmark"></i>The museum</a
+                >
+              </li>
+            </ul>
           </li>
           <li>
-            <a href="explore.html"><i class="fas fa-binoculars"></i>Explore</a>
+            <a href="get-involved.html"
+              ><i aria-hidden="true" class="fas fa-hands-helping"></i>Get
+              involved</a
+            >
           </li>
           <li>
-            <a href="the-museum.html"><i class="fas fa-landmark"></i>The museum</a>
-          </li></ul> </li>
-        <li><a href="get-involved.html"><i aria-hidden="true" class="fas fa-hands-helping"></i>Get involved</a></li>
-        <li><a href="contact.html"><i aria-hidden="true" class="fas fa-comment-dots"></i>Contact</a></li>
-      </ul>
-      <a aria-label="Close main menu" class="close" href="#">
-        <span class="sr-only">Close main menu</span>
-      <i aria-hidden="true" class="fas fa-times"></i></a>
-    </nav>
-  </header>
+            <a href="contact.html"
+              ><i aria-hidden="true" class="fas fa-comment-dots"></i>Contact</a
+            >
+          </li>
+        </ul>
+        <a aria-label="Close main menu" class="close" href="#">
+          <span class="sr-only">Close main menu</span>
+          <i aria-hidden="true" class="fas fa-times"></i
+        ></a>
+      </nav>
+    </header>
     <main>
       <section>
         <h1>Get involved</h1>
         <h2>Support</h2>
         <div class="image-wrapper">
           <div class="get-involved-bulb image-one">
-        <img src="/images/get-involved/support/learning-3245793_1280.jpg" alt="Drawing of lightbulb surrounded by science icons"/>
+            <img
+              src="/images/get-involved/support/learning-3245793_1280.jpg"
+              alt="Drawing of lightbulb surrounded by science icons"
+            />
+          </div>
+          <div class="get-involved-museum image-two">
+            <img
+              src="/images/get-involved/support/scott-webb-102825.jpg"
+              alt="Museum's façade"
+            />
+          </div>
+          <div class="get-involved-child image-three">
+            <img
+              src="/images/get-involved/support/learn-2405206_1920.jpg"
+              alt="Child fascinated at physics formulas"
+            />
+          </div>
         </div>
-        <div class="get-involved-museum image-two">
-        <img src="/images/get-involved/support/scott-webb-102825.jpg" alt="Museum's façade"/>
-        </div>
-        <div  class="get-involved-child image-three">
-        <img src="/images/get-involved/support/learn-2405206_1920.jpg" alt="Child fascinated at physics formulas"/>
-        </div>
-        </div>
-        <p>There are various ways you can support the museum. Donations are very welcome and are an important way we keep this museum open and accessible to the whole community. 
+        <p>
+          There are various ways you can support the museum. Donations are very
+          welcome and are an important way we keep this museum open and
+          accessible to the whole community.
         </p>
-        <p>You can also support us by donating items of interest to the museum’s collections. If you have some item or collection that you think others would enjoy, please let us know by <a class="link-in-text" href="/contact.html">contacting our Collections Department</a> and they will be able to assist you.</p>
+        <p>
+          You can also support us by donating items of interest to the museum’s
+          collections. If you have some item or collection that you think others
+          would enjoy, please let us know by
+          <a class="link-in-text" href="/contact.html"
+            >contacting our Collections Department</a
+          >
+          and they will be able to assist you.
+        </p>
       </section>
-        <section>
+      <section>
         <h2>Volunteer</h2>
         <div class="image-wrapper">
           <div class="volunteer-exhibition-hall image-one">
-        <img src="/images/get-involved/volunteer/exhibition-1863344_1920.jpg" alt="Museum's exhibition hall" />
+            <img
+              src="/images/get-involved/volunteer/exhibition-1863344_1920.jpg"
+              alt="Museum's exhibition hall"
+            />
+          </div>
+          <div class="volunteer-exhibit image-two">
+            <img
+              src="/images/get-involved/volunteer/jesse-orrico-60373.jpg"
+              alt="See-through plastic skull with veins and brain"
+            />
+          </div>
+          <div class="volunteer-library image-three">
+            <img
+              src="/images/get-involved/volunteer/library-1132573_1920.jpg"
+              alt="Museum's library"
+            />
+          </div>
         </div>
-        <div class="volunteer-exhibit image-two">
-        <img src="/images/get-involved/volunteer/jesse-orrico-60373.jpg" alt="See-through plastic skull with veins and brain" />
-        </div>
-        <div  class="volunteer-library image-three">
-        <img src="/images/get-involved/volunteer/library-1132573_1920.jpg" alt="Museum's library"/>
-        </div>
-        </div>
-        <p>A number of people volunteer their time and effort to keep the displays in good order and ready for visitors to come and enjoy. Volunteering has its perks including getting to see behind the scenes of a working museum, access to staff-only lectures, and a monthly lunch where all staff and volunteers come together to discuss ideas for future exhibits and strategies for the museum.
+        <p>
+          A number of people volunteer their time and effort to keep the
+          displays in good order and ready for visitors to come and enjoy.
+          Volunteering has its perks including getting to see behind the scenes
+          of a working museum, access to staff-only lectures, and a monthly
+          lunch where all staff and volunteers come together to discuss ideas
+          for future exhibits and strategies for the museum.
         </p>
-        <p>You can help volunteer in a number of different spheres. Please <a class="link-in-text" href="/contact.html">contact us</a> if you’d like to find out more about how you can get involved.
+        <p>
+          You can help volunteer in a number of different spheres. Please
+          <a class="link-in-text" href="/contact.html">contact us</a> if you’d
+          like to find out more about how you can get involved.
         </p>
       </section>
-        <section>
+      <section>
         <h2>Internships</h2>
         <div class="image-wrapper">
           <div class="internship-skeleton image-one">
-        <img src="/images/get-involved/internships/skeleton-414543_1920.jpg" alt="Skeletons exhibits"/>
+            <img
+              src="/images/get-involved/internships/skeleton-414543_1920.jpg"
+              alt="Skeletons exhibits"
+            />
+          </div>
+          <div class="internship-computer-code image-two">
+            <img
+              src="/images/get-involved/internships/source-4280758_1280.jpg"
+              alt="Computer's source code in blue background"
+            />
+          </div>
+          <div class="internship-reptile image-three">
+            <img
+              src="/images/get-involved/internships/primeval-times-1257162_1280.jpg"
+              alt="Exhibit of extinct reptile replica"
+            />
+          </div>
         </div>
-        <div class="internship-computer-code image-two">
-        <img src="/images/get-involved/internships/source-4280758_1280.jpg" alt="Computer's source code in blue background"/>
-        </div>
-        <div  class="internship-reptile image-three">
-        <img src="/images/get-involved/internships/primeval-times-1257162_1280.jpg" alt="Exhibit of extinct reptile replica"/>
-        </div>
-        </div>
-        <p>Are you interested in working in a museum? Do you enjoy the fun and excitement of sharing the wonders of nature with people? Well you could be just the right person to enjoy an internship at the museum.
+        <p>
+          Are you interested in working in a museum? Do you enjoy the fun and
+          excitement of sharing the wonders of nature with people? Well you
+          could be just the right person to enjoy an internship at the museum.
         </p>
-        <p>You’ll be learning from a number of different academics and people who are passionate about science and sharing it with the wider community.
+        <p>
+          You’ll be learning from a number of different academics and people who
+          are passionate about science and sharing it with the wider community.
         </p>
-        <p>Please <a class="link-in-text" href="/contact.html">get in touch with us here</a> to ask for an application form.</p>
+        <p>
+          Please
+          <a class="link-in-text" href="/contact.html"
+            >get in touch with us here</a
+          >
+          to ask for an application form.
+        </p>
       </section>
-</main>
-<footer>
-  <form method="" class="newsletter">
+    </main>
+    <footer>
+      <form class="newsletter">
         <div class="newsletter-field">
-        <label class="newsletter-heading" for="email">subscribe to our newsletter</label>
-        <input class="newsletter-contact-field" type="email" id="email" placeholder="example@email.com" />
+          <label class="newsletter-heading" for="email"
+            >subscribe to our newsletter</label
+          >
+          <input
+            class="newsletter-contact-field"
+            type="email"
+            id="email"
+            placeholder="example@email.com"
+          />
         </div>
         <div class="cta-newsletter">
           <label for="toggle-popup" class="cta">sign up</label>
           <input type="checkbox" id="toggle-popup" />
           <div class="modal-popup">
-            <img src="/images/rocket.svg">
+            <img alt="yellow rocket" src="/images/rocket.svg" />
             <div class="feedback">
-              <label class="close-feedback" for="toggle-popup"><i class="fas fa-times"></i></label>
-            <p>
-              You won't miss out a thing!
-            </p>
+              <label class="close-feedback" for="toggle-popup"
+                ><i class="fas fa-times"></i
+              ></label>
+              <p>You won't miss out a thing!</p>
+            </div>
           </div>
         </div>
+      </form>
+      <div class="socials">
+        <p>follow us on social media</p>
+        <div>
+          <ul class="socials-icons">
+            <li>
+              <a aria-label="Tik tok" href="#"
+                ><i aria-hidden="true" class="fab fa-tiktok"></i
+              ></a>
+            </li>
+            <li>
+              <a aria-label="Youtube" href="#"
+                ><i aria-hidden="true" class="fab fa-youtube"></i
+              ></a>
+            </li>
+            <li>
+              <a aria-label="Instagram" href="#"
+                ><i aria-hidden="true" class="fab fa-instagram"></i
+              ></a>
+            </li>
+            <li>
+              <a aria-label="Facebook" href="#"
+                ><i aria-hidden="true" class="fab fa-facebook-square"></i
+              ></a>
+            </li>
+          </ul>
+        </div>
       </div>
-  </form>
-  <div class="socials">
-    <p>follow us on social media</p>
-    <div >
-      <ul class="socials-icons">
-        <li><a aria-label="Tik tok" href="#"><i aria-hidden="true" class="fab fa-tiktok" ></i></a></li>
-        <li><a aria-label="Youtube" href="#"><i aria-hidden="true" class="fab fa-youtube"></i></a></li>
-        <li><a aria-label="Instagram" href="#"><i aria-hidden="true" class="fab fa-instagram"></i></a></li>
-        <li><a aria-label="Facebook" href="#"><i aria-hidden="true" class="fab fa-facebook-square"></i></a></li>
-    </ul>
-    </div>
-  </div> 
-  <p class="copyright">&#169 Copyright 2021</p>
-</footer>
-</body>
+      <p class="copyright">&#169; Copyright 2021</p>
+    </footer>
+  </body>
 </html>
