--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="description"
-      content="Get in touch with us"
-    />
+    <meta name="description" content="Get in touch with us" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Community Science Museum | Get in touch</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -16,7 +13,7 @@
       rel="stylesheet"
     />
     <link href="css/style.css" rel="stylesheet" />
-   <link href="/css/explore_contact_get-involved.css" rel="stylesheet"/>
+    <link href="/css/explore_contact_get-involved.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
     <script
       src="https://kit.fontawesome.com/9aef28119c.js"
@@ -26,114 +23,179 @@
   <body>
     <header>
       <div class="home">
-        <a href="index.html"><img alt="Community science museum logo"
-          class="logo" src="images/logo-desktop.png"/></a>
-      <a aria-label="Open main menu" class="hamburger" href="#navbar">
-      <span class="sr-only">Open main menu</span>
-    <i aria-hidden="true" class="fas fa-bars"></i></a>
-    </div>
-    <nav id="navbar">
-      <ul>
-        <li class="dropdown"><a class="hidden-small-screens" href="#"><i aria-hidden="true" class="fas fa-tasks"></i>Plan your visit<i class="fas fa-sort-down"></i></a>
-          <ul class="dropdown-menu">
-          <li></i> <a href="exhibitions.html"><i class="fas fa-images"></i>Exhibitions</a>
+        <a href="index.html"
+          ><img
+            alt="Community science museum logo"
+            class="logo"
+            src="images/logo-desktop.png"
+        /></a>
+        <a aria-label="Open main menu" class="hamburger" href="#navbar">
+          <span class="sr-only">Open main menu</span>
+          <i aria-hidden="true" class="fas fa-bars"></i
+        ></a>
+      </div>
+      <nav id="navbar">
+        <ul>
+          <li class="dropdown">
+            <a class="hidden-small-screens" href="#"
+              ><i aria-hidden="true" class="fas fa-tasks"></i>Plan your visit<i
+                class="fas fa-sort-down"
+              ></i
+            ></a>
+            <ul class="dropdown-menu">
+              <li>
+                <a href="exhibitions.html"
+                  ><i class="fas fa-images"></i>Exhibitions</a
+                >
+              </li>
+              <li>
+                <a href="explore.html"
+                  ><i class="fas fa-binoculars"></i>Explore</a
+                >
+              </li>
+              <li>
+                <a href="the-museum.html"
+                  ><i class="fas fa-landmark"></i>The museum</a
+                >
+              </li>
+            </ul>
           </li>
           <li>
-            <a href="explore.html"><i class="fas fa-binoculars"></i>Explore</a>
+            <a href="get-involved.html"
+              ><i aria-hidden="true" class="fas fa-hands-helping"></i>Get
+              involved</a
+            >
           </li>
           <li>
-            <a href="the-museum.html"><i class="fas fa-landmark"></i>The museum</a>
-          </li></ul> </li>
-        <li><a href="get-involved.html"><i aria-hidden="true" class="fas fa-hands-helping"></i>Get involved</a></li>
-        <li><a href="contact.html"><i aria-hidden="true" class="fas fa-comment-dots"></i>Contact</a></li>
-      </ul>
-      <a aria-label="Close main menu" class="close" href="#">
-        <span class="sr-only">Close main menu</span>
-      <i aria-hidden="true" class="fas fa-times"></i></a>
-    </nav>
-  </header>
+            <a href="contact.html"
+              ><i aria-hidden="true" class="fas fa-comment-dots"></i>Contact</a
+            >
+          </li>
+        </ul>
+        <a aria-label="Close main menu" class="close" href="#">
+          <span class="sr-only">Close main menu</span>
+          <i aria-hidden="true" class="fas fa-times"></i
+        ></a>
+      </nav>
+    </header>
     <main>
-        <h1>Get in touch</h1>
-        <form method="" class="contact-form">
-          <div class="contact-intro">
-            <p>Please get in touch with us using the form below.</p>
-            <p>We do our best to reply within 24 hours.</p>
+      <h1>Get in touch</h1>
+      <form class="contact-form">
+        <div class="contact-intro">
+          <p>Please get in touch with us using the form below.</p>
+          <p>We do our best to reply within 24 hours.</p>
         </div>
-     <!--       <div class="form-field"> -->
-            <label class="contact-heading" for="name">Name and surname</label>
-            <input class="contact-field" type="text"  id="name" placeholder="Melisa Zorraindo" />
-   <!--         </div>
-            <div class="form-field"> -->
-               <label class="contact-heading" for="email">Email</label>
-               <input class="contact-field email" type="email"  id="email" placeholder="example@email.com" />
-               <div class="contact-message">
-                  <small><i class="fas fa-lock"></i></small>
-                  <small>We don't send spam to our users</small>
-               </div>
-      <!--      </div> -->
-            <label class="contact-heading" for="subject" >Please select the subject</label>
-            <select name="subject" id="subject-option" class="contact-field">
-              <option value="young-stars-club">join the Young Stars club</option>
-              <option value="holiday-club">join the holiday club</option>
-              <option value="group-booking">book a group visit</option>
-              <option value="collaborate-researcher">collaborate as a researcher</option>
-                <option value="donate">donate to the collections department</option>
-                <option value="volunteer">volunteer</option>
-                <option value="internship">apply for an internship</option>
-            </select>
-            <div class="form-field"> 
-            <label class="contact-heading" for="message">Message</label>
-            <textarea id="message"></textarea>
-        <!--   </div> -->
-            <div class="cta-form"> 
-                <label for="pop-up-cta" class="cta">send</label>
-                <input type="checkbox" id="pop-up-cta" />
-                <div class="popup-box">
-                  <img src="/images/rocket.svg">
-                  <div class="message">
-                    <label class="close-popup" for="pop-up-cta"><i class="fas fa-times"></i></label>
-                  <h2>Thank you for your message</h2>
-                  <p>
-                    We will get back to you as soon as possible
-                  </p>
-                </div>
+
+        <label class="contact-heading" for="name">Name and surname</label>
+        <input
+          class="contact-field"
+          type="text"
+          id="name"
+          placeholder="Melisa Zorraindo"
+        />
+
+        <label class="contact-heading" for="email">Email</label>
+        <input
+          class="contact-field email"
+          type="email"
+          id="email-contact"
+          placeholder="example@email.com"
+        />
+        <div class="contact-message">
+          <small><i class="fas fa-lock"></i></small>
+          <small>We don't send spam to our users</small>
+        </div>
+
+        <label class="contact-heading" for="subject"
+          >Please select the subject</label
+        >
+        <select name="subject" id="subject-option" class="contact-field">
+          <option value="young-stars-club">join the Young Stars club</option>
+          <option value="holiday-club">join the holiday club</option>
+          <option value="group-booking">book a group visit</option>
+          <option value="collaborate-researcher">
+            collaborate as a researcher
+          </option>
+          <option value="donate">donate to the collections department</option>
+          <option value="volunteer">volunteer</option>
+          <option value="internship">apply for an internship</option>
+        </select>
+        <div class="form-field">
+          <label class="contact-heading" for="message">Message</label>
+          <textarea id="message"></textarea>
+
+          <div class="cta-form">
+            <label for="pop-up-cta" class="cta">send</label>
+            <input type="checkbox" id="pop-up-cta" />
+            <div class="popup-box">
+              <img src="/images/rocket.svg" />
+              <div class="message">
+                <label class="close-popup" for="pop-up-cta"
+                  ><i class="fas fa-times"></i
+                ></label>
+                <h2>Thank you for your message</h2>
+                <p>We will get back to you as soon as possible</p>
               </div>
-               </div>
-         </div>
-        </form>
-</main>
-<footer>
-  <form method="" class="newsletter">
+            </div>
+          </div>
+        </div>
+      </form>
+    </main>
+    <footer>
+      <form class="newsletter">
         <div class="newsletter-field">
-        <label class="newsletter-heading" for="email">subscribe to our newsletter</label>
-        <input class="newsletter-contact-field" type="email" id="email" placeholder="example@email.com" />
+          <label class="newsletter-heading" for="email"
+            >subscribe to our newsletter</label
+          >
+          <input
+            class="newsletter-contact-field"
+            type="email"
+            id="email"
+            placeholder="example@email.com"
+          />
         </div>
         <div class="cta-newsletter">
           <label for="toggle-popup" class="cta">sign up</label>
           <input type="checkbox" id="toggle-popup" />
           <div class="modal-popup">
-            <img src="/images/rocket.svg">
+            <img alt="yellow rocket" src="/images/rocket.svg" />
             <div class="feedback">
-              <label class="close-feedback" for="toggle-popup"><i class="fas fa-times"></i></label>
-            <p>
-              You won't miss out a thing!
-            </p>
+              <label class="close-feedback" for="toggle-popup"
+                ><i class="fas fa-times"></i
+              ></label>
+              <p>You won't miss out a thing!</p>
+            </div>
           </div>
         </div>
+      </form>
+      <div class="socials">
+        <p>follow us on social media</p>
+        <div>
+          <ul class="socials-icons">
+            <li>
+              <a aria-label="Tik tok" href="#"
+                ><i aria-hidden="true" class="fab fa-tiktok"></i
+              ></a>
+            </li>
+            <li>
+              <a aria-label="Youtube" href="#"
+                ><i aria-hidden="true" class="fab fa-youtube"></i
+              ></a>
+            </li>
+            <li>
+              <a aria-label="Instagram" href="#"
+                ><i aria-hidden="true" class="fab fa-instagram"></i
+              ></a>
+            </li>
+            <li>
+              <a aria-label="Facebook" href="#"
+                ><i aria-hidden="true" class="fab fa-facebook-square"></i
+              ></a>
+            </li>
+          </ul>
+        </div>
       </div>
-  </form>
-  <div class="socials">
-    <p>follow us on social media</p>
-    <div >
-      <ul class="socials-icons">
-        <li><a aria-label="Tik tok" href="#"><i aria-hidden="true" class="fab fa-tiktok" ></i></a></li>
-        <li><a aria-label="Youtube" href="#"><i aria-hidden="true" class="fab fa-youtube"></i></a></li>
-        <li><a aria-label="Instagram" href="#"><i aria-hidden="true" class="fab fa-instagram"></i></a></li>
-        <li><a aria-label="Facebook" href="#"><i aria-hidden="true" class="fab fa-facebook-square"></i></a></li>
-    </ul>
-    </div>
-  </div> 
-  <p class="copyright">&#169 Copyright 2021</p>
-</footer>
-</body>
+      <p class="copyright">&#169; Copyright 2021</p>
+    </footer>
+  </body>
 </html>
