Second round of Validator HTML

--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
           <small>We don't send spam to our users</small>
         </div>
 
-        <label class="contact-heading" for="subject"
+        <label class="contact-heading" for="subject-option"
           >Please select the subject</label
         >
         <select name="subject" id="subject-option" class="contact-field">
@@ -128,7 +128,7 @@
             <label for="pop-up-cta" class="cta">send</label>
             <input type="checkbox" id="pop-up-cta" />
             <div class="popup-box">
-              <img src="/images/rocket.svg" />
+              <img alt="yellow rocket" src="/images/rocket.svg" />
               <div class="message">
                 <label class="close-popup" for="pop-up-cta"
                   ><i class="fas fa-times"></i
