--- a/get-involved.html
+++ b/get-involved.html
@@ -83,119 +83,131 @@
       </nav>
     </header>
     <main>
-      <section>
-        <h1>Get involved</h1>
-        <h2>Support</h2>
-        <div class="image-wrapper">
-          <div class="get-involved-bulb image-one">
-            <img
-              src="/images/get-involved/support/learning-3245793_1280.jpg"
-              alt="Drawing of lightbulb surrounded by science icons"
-            />
+      <h1>Get involved</h1>
+      <div class="explore-involved-container">
+        <section>
+          <h2>Support</h2>
+          <div class="image-wrapper">
+            <div class="get-involved-bulb image-one">
+              <img
+                src="/images/get-involved/support/learning-3245793_1280.jpg"
+                alt="Drawing of lightbulb surrounded by science icons"
+              />
+            </div>
+            <div class="get-involved-museum image-two">
+              <img
+                src="/images/get-involved/support/scott-webb-102825.jpg"
+                alt="Museum's façade"
+              />
+            </div>
+            <div class="get-involved-child image-three">
+              <img
+                src="/images/get-involved/support/learn-2405206_1920.jpg"
+                alt="Child fascinated at physics formulas"
+              />
+            </div>
           </div>
-          <div class="get-involved-museum image-two">
-            <img
-              src="/images/get-involved/support/scott-webb-102825.jpg"
-              alt="Museum's façade"
-            />
+          <div class="paragraph-container">
+            <p>
+              There are various ways you can support the museum. Donations are
+              very welcome and are an important way we keep this museum open and
+              accessible to the whole community.
+            </p>
+            <p>
+              You can also support us by donating items of interest to the
+              museum’s collections. If you have some item or collection that you
+              think others would enjoy, please let us know by
+              <a class="link-in-text" href="/contact.html"
+                >contacting our Collections Department</a
+              >
+              and they will be able to assist you.
+            </p>
           </div>
-          <div class="get-involved-child image-three">
-            <img
-              src="/images/get-involved/support/learn-2405206_1920.jpg"
-              alt="Child fascinated at physics formulas"
-            />
+        </section>
+
+        <section>
+          <h2>Volunteer</h2>
+          <div class="image-wrapper">
+            <div class="volunteer-exhibition-hall image-one">
+              <img
+                src="/images/get-involved/volunteer/exhibition-1863344_1920.jpg"
+                alt="Museum's exhibition hall"
+              />
+            </div>
+            <div class="volunteer-exhibit image-two">
+              <img
+                src="/images/get-involved/volunteer/jesse-orrico-60373.jpg"
+                alt="See-through plastic skull with veins and brain"
+              />
+            </div>
+            <div class="volunteer-library image-three">
+              <img
+                src="/images/get-involved/volunteer/library-1132573_1920.jpg"
+                alt="Museum's library"
+              />
+            </div>
           </div>
-        </div>
-        <p>
-          There are various ways you can support the museum. Donations are very
-          welcome and are an important way we keep this museum open and
-          accessible to the whole community.
-        </p>
-        <p>
-          You can also support us by donating items of interest to the museum’s
-          collections. If you have some item or collection that you think others
-          would enjoy, please let us know by
-          <a class="link-in-text" href="/contact.html"
-            >contacting our Collections Department</a
-          >
-          and they will be able to assist you.
-        </p>
-      </section>
-      <section>
-        <h2>Volunteer</h2>
-        <div class="image-wrapper">
-          <div class="volunteer-exhibition-hall image-one">
-            <img
-              src="/images/get-involved/volunteer/exhibition-1863344_1920.jpg"
-              alt="Museum's exhibition hall"
-            />
+          <div class="paragraph-container">
+            <p>
+              A number of people volunteer their time and effort to keep the
+              displays in good order and ready for visitors to come and enjoy.
+              Volunteering has its perks including getting to see behind the
+              scenes of a working museum, access to staff-only lectures, and a
+              monthly lunch where all staff and volunteers come together to
+              discuss ideas for future exhibits and strategies for the museum.
+            </p>
+            <p>
+              You can help volunteer in a number of different spheres. Please
+              <a class="link-in-text" href="/contact.html">contact us</a> if
+              you’d like to find out more about how you can get involved.
+            </p>
           </div>
-          <div class="volunteer-exhibit image-two">
-            <img
-              src="/images/get-involved/volunteer/jesse-orrico-60373.jpg"
-              alt="See-through plastic skull with veins and brain"
-            />
+        </section>
+
+        <section>
+          <h2>Internships</h2>
+          <div class="image-wrapper">
+            <div class="internship-skeleton image-one">
+              <img
+                src="/images/get-involved/internships/skeleton-414543_1920.jpg"
+                alt="Skeletons exhibits"
+              />
+            </div>
+            <div class="internship-computer-code image-two">
+              <img
+                src="/images/get-involved/internships/source-4280758_1280.jpg"
+                alt="Computer's source code in blue background"
+              />
+            </div>
+            <div class="internship-reptile image-three">
+              <img
+                src="/images/get-involved/internships/primeval-times-1257162_1280.jpg"
+                alt="Exhibit of extinct reptile replica"
+              />
+            </div>
           </div>
-          <div class="volunteer-library image-three">
-            <img
-              src="/images/get-involved/volunteer/library-1132573_1920.jpg"
-              alt="Museum's library"
-            />
+          <div class="paragraph-container">
+            <p>
+              Are you interested in working in a museum? Do you enjoy the fun
+              and excitement of sharing the wonders of nature with people? Well
+              you could be just the right person to enjoy an internship at the
+              museum.
+            </p>
+            <p>
+              You’ll be learning from a number of different academics and people
+              who are passionate about science and sharing it with the wider
+              community.
+            </p>
+            <p>
+              Please
+              <a class="link-in-text" href="/contact.html"
+                >get in touch with us here</a
+              >
+              to ask for an application form.
+            </p>
           </div>
-        </div>
-        <p>
-          A number of people volunteer their time and effort to keep the
-          displays in good order and ready for visitors to come and enjoy.
-          Volunteering has its perks including getting to see behind the scenes
-          of a working museum, access to staff-only lectures, and a monthly
-          lunch where all staff and volunteers come together to discuss ideas
-          for future exhibits and strategies for the museum.
-        </p>
-        <p>
-          You can help volunteer in a number of different spheres. Please
-          <a class="link-in-text" href="/contact.html">contact us</a> if you’d
-          like to find out more about how you can get involved.
-        </p>
-      </section>
-      <section>
-        <h2>Internships</h2>
-        <div class="image-wrapper">
-          <div class="internship-skeleton image-one">
-            <img
-              src="/images/get-involved/internships/skeleton-414543_1920.jpg"
-              alt="Skeletons exhibits"
-            />
-          </div>
-          <div class="internship-computer-code image-two">
-            <img
-              src="/images/get-involved/internships/source-4280758_1280.jpg"
-              alt="Computer's source code in blue background"
-            />
-          </div>
-          <div class="internship-reptile image-three">
-            <img
-              src="/images/get-involved/internships/primeval-times-1257162_1280.jpg"
-              alt="Exhibit of extinct reptile replica"
-            />
-          </div>
-        </div>
-        <p>
-          Are you interested in working in a museum? Do you enjoy the fun and
-          excitement of sharing the wonders of nature with people? Well you
-          could be just the right person to enjoy an internship at the museum.
-        </p>
-        <p>
-          You’ll be learning from a number of different academics and people who
-          are passionate about science and sharing it with the wider community.
-        </p>
-        <p>
-          Please
-          <a class="link-in-text" href="/contact.html"
-            >get in touch with us here</a
-          >
-          to ask for an application form.
-        </p>
-      </section>
+        </section>
+      </div>
     </main>
     <footer>
       <form class="newsletter">
