Media queries exhibitions page larger screens

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -84,7 +84,7 @@
     </header>
     <main>
       <h1>Exhibitions</h1>
-      <div class="wrapper">
+      <div class="wrapper wrapper-exhibitions">
         <article id="robotics">
           <div class="exhibition-info">
             <h2>The era of robots</h2>
