Updated media queries larger screens contact page

--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
       </nav>
     </header>
     <main>
-      <h1>Get in touch</h1>
+      <h1 class="heading-contact-form">Get in touch</h1>
       <form class="contact-form">
         <div class="contact-intro">
           <p>Please get in touch with us using the form below.</p>
