Updated media queries for the museum page larger screens

--- a/contact.html
+++ b/contact.html
@@ -119,6 +119,8 @@
           <option value="donate">donate to the collections department</option>
           <option value="volunteer">volunteer</option>
           <option value="internship">apply for an internship</option>
+          <option value="suggestion">make a suggestion</option>
+          <option value="complaint">raise a complaint</option>
         </select>
         <div class="form-field">
           <label class="contact-heading" for="message">Message</label>
