Added margins, fixed pictures explore section landing page

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
       </div>
       <div class="landing-grid">
-        <div>
+        <div class="exhibitions-card">
           <div class="wrapper">
             <div>
               <div class="exhibition ecology">
@@ -142,7 +142,7 @@
                 </div>
               </div>
             </div>
-            <div>
+            <div class="exhibitions-card">
               <div class="exhibition cosmology">
                 <h2>The sky above us</h2>
               </div>
@@ -170,7 +170,7 @@
                 </div>
               </div>
             </div>
-            <div>
+            <div class="exhibitions-card">
               <div class="exhibition bio-and-med">
                 <h2>The micro world</h2>
               </div>
@@ -198,7 +198,7 @@
                 </div>
               </div>
             </div>
-            <div>
+            <div class="exhibitions-card">
               <div class="exhibition evolution">
                 <h2>Bones talk</h2>
               </div>
