--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </header>
     <main>
       <div class="featured-exhibition">
-        <h1>The era of robots</h1>
+        <h1><a href="/exhibitions.html#robotics">The era of robots</a></h1>
         <div class="featured-exhibition-brief">
           <div>
             <div class="exhibition-brief-specs">
@@ -116,7 +116,7 @@
           <div class="wrapper">
             <div>
               <div class="exhibition ecology">
-                <h2>Time to change</h2>
+                <h2><a href="/exhibitions.html#ecology">Time to change</a></h2>
               </div>
               <div class="exhibition-brief">
                 <div>
@@ -144,7 +144,9 @@
             </div>
             <div class="exhibitions-card">
               <div class="exhibition cosmology">
-                <h2>The sky above us</h2>
+                <h2>
+                  <a href="/exhibitions.html#cosmology">The sky above us</a>
+                </h2>
               </div>
               <div class="exhibition-brief">
                 <div>
@@ -172,7 +174,7 @@
             </div>
             <div class="exhibitions-card">
               <div class="exhibition bio-and-med">
-                <h2>The micro world</h2>
+                <h2><a href="/exhibitions.html#biology">The micro world</a></h2>
               </div>
               <div class="exhibition-brief">
                 <div>
@@ -200,7 +202,7 @@
             </div>
             <div class="exhibitions-card">
               <div class="exhibition evolution">
-                <h2>Bones talk</h2>
+                <h2><a href="/exhibitions.html#evolution">Bones talk</a></h2>
               </div>
               <div class="exhibition-brief">
                 <div>
