--- a/explore.html
+++ b/explore.html
@@ -83,9 +83,8 @@
       </nav>
     </header>
     <main>
-      <h1>Explore</h1>
-
-      <section class="paragraph-container">
+      <section class="main-paragraph-container">
+        <h1>Explore</h1>
         <h2>Explore together</h2>
         <div class="image-wrapper">
           <div class="who-we-are-mammoth image-one">
