Capitalised options contact form, left aligned menu items on mobile, added cursor to buttons and removed shadows on hover

--- a/contact.html
+++ b/contact.html
@@ -110,17 +110,17 @@
           >Please select the subject</label
         >
         <select name="subject" id="subject-option" class="contact-field">
-          <option value="young-stars-club">join the Young Stars club</option>
-          <option value="holiday-club">join the holiday club</option>
-          <option value="group-booking">book a group visit</option>
+          <option value="young-stars-club">Join the Young Stars club</option>
+          <option value="holiday-club">Join the holiday club</option>
+          <option value="group-booking">Book a group visit</option>
           <option value="collaborate-researcher">
-            collaborate as a researcher
+            Collaborate as a researcher
           </option>
-          <option value="donate">donate to the collections department</option>
-          <option value="volunteer">volunteer</option>
-          <option value="internship">apply for an internship</option>
-          <option value="suggestion">make a suggestion</option>
-          <option value="complaint">raise a complaint</option>
+          <option value="donate">Donate to the collections department</option>
+          <option value="volunteer">Volunteer</option>
+          <option value="internship">Apply for an internship</option>
+          <option value="suggestion">Make a suggestion</option>
+          <option value="complaint">Raise a complaint</option>
         </select>
         <div class="form-field">
           <label class="contact-heading" for="message">Message</label>
