--- a/index.html
+++ b/index.html
@@ -298,13 +298,13 @@
           <div class="news">
             <div class="slider" id="news-one">
               <h3>visiting professor of aeronautics</h3>
-              <p class="news-info">
+              <p>
                 It is our pleasure to announce that Prof Sheila Widnall from the
                 Massachusetts Institute of Technology will be delivering 3
                 lectures on the development of aeronautics and where the future
                 lies in this exciting ‘space’.
               </p>
-              <div class="exhibition-brief news-brief">
+              <div class="news-brief">
                 <div class="exhibition-brief-specs">
                   <i class="fas fa-thumbs-up"></i>
                   <p>7 - 10 years old</p>
@@ -323,13 +323,13 @@
             </div>
             <div class="slider" id="news-two">
               <h3>night in the museum</h3>
-              <p class="news-info">
+              <p>
                 Get your family together for an exciting night in the museum as
                 you sleep over beside dinosaurs and science displays. Bring your
                 own sleeping bag and get ready to rough it as we go exploring
                 the wonders of science.
               </p>
-              <div class="exhibition-brief news-brief">
+              <div>
                 <div class="exhibition-brief-specs">
                   <i class="fas fa-thumbs-up"></i>
                   <p>Whole family</p>
@@ -346,13 +346,13 @@
             </div>
             <div class="slider" id="news-three">
               <h3>energetica exhibition on loan</h3>
-              <p class="news-info">
+              <p>
                 On loan from the NEMO Science Museum in Amsterdam, the
                 Energetica exhibition is a series of installations that allow
                 visitors to experience the power of the elements as we harness
                 them.
               </p>
-              <div class="exhibition-brief news-brief">
+              <div class="news-brief">
                 <div class="exhibition-brief-specs">
                   <i class="fas fa-thumbs-up"></i>
                   <p>5 - 10 years old</p>
