--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 own sleeping bag and get ready to rough it as we go exploring
                 the wonders of science.
               </p>
-              <div>
+              <div class="news-brief">
                 <div class="exhibition-brief-specs">
                   <i class="fas fa-thumbs-up"></i>
                   <p>Whole family</p>
