--- a/get-involved.html
+++ b/get-involved.html
@@ -32,8 +32,8 @@
             class="logo"
             src="images/logo-desktop.png"
         /></a>
-        <a aria-label="Open main menu" class="hamburger" href="#navbar">
-          <span class="sr-only">Open main menu</span>
+        <a aria-label="Open hamburger menu" class="hamburger" href="#navbar">
+          <span class="sr-only">Open hamburger menu</span>
           <i aria-hidden="true" class="fas fa-bars"></i
         ></a>
       </div>
@@ -75,8 +75,8 @@
             >
           </li>
         </ul>
-        <a aria-label="Close main menu" class="close" href="#">
-          <span class="sr-only">Close main menu</span>
+        <a aria-label="Close hamburger menu" class="close" href="#">
+          <span class="sr-only">Close hamburger menu</span>
           <i aria-hidden="true" class="fas fa-times"></i
         ></a>
       </nav>
