--- a/contact.html
+++ b/contact.html
@@ -81,32 +81,37 @@
     <main>
       <h1 class="heading-contact-form">Get in touch</h1>
       <form class="contact-form">
-        <div class="contact-intro">
-          <p>Please get in touch with us using the form below.</p>
-          <p>We do our best to reply within 24 hours.</p>
-        </div>
-        <label class="contact-heading" for="name">Name and surname</label>
+        <p>
+          Please get in touch with us using the form below. We do our best to
+          reply within 24 hours.
+        </p>
+        <label class="contact-heading" for="name"
+          >Name and surname<span>*</span>
+        </label>
         <input
           class="contact-field"
           type="text"
           id="name"
           placeholder="Melisa Zorraindo"
+          required
         />
-        <label class="contact-heading" for="email">Email</label>
+        <label class="contact-heading" for="email">Email<span>*</span></label>
         <input
           class="contact-field email"
           type="email"
           id="email-contact"
           placeholder="example@email.com"
+          required
         />
-        <div class="contact-message">
-          <small><i class="fas fa-lock"></i></small>
-          <small>We don't send spam to our users</small>
-        </div>
         <label class="contact-heading" for="subject-option"
-          >Please select the subject</label
+          >Please select the subject<span>*</span></label
         >
-        <select name="subject" id="subject-option" class="contact-field">
+        <select
+          name="subject"
+          id="subject-option"
+          class="contact-field"
+          required
+        >
           <option value="young-stars-club">Join the Young Stars club</option>
           <option value="holiday-club">Join the holiday club</option>
           <option value="group-booking">Book a group visit</option>
@@ -120,8 +125,10 @@
           <option value="complaint">Raise a complaint</option>
         </select>
         <div class="form-field">
-          <label class="contact-heading" for="message">Message</label>
-          <textarea id="message"></textarea>
+          <label class="contact-heading" for="message"
+            >Message<span>*</span></label
+          >
+          <textarea id="message" required></textarea>
           <div class="cta-form">
             <label for="pop-up-cta" class="cta">send</label>
             <input type="checkbox" id="pop-up-cta" />
