--- a/contact.html
+++ b/contact.html
@@ -131,7 +131,7 @@
             >Message<span>*</span></label
           >
           <textarea id="message" required></textarea>
-          <button class="cta">send</button>
+          <button class="cta cta-form">send</button>
           <div class="popup-box hidden">
             <img alt="yellow rocket" src="/images/rocket.svg" />
             <div class="message">
